--- a/.github/workflows/workflow1.yml
+++ b/.github/workflows/workflow1.yml
@@ -15,7 +15,7 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
       - name: Run tests with maven
-        run: mvn -Dtest=unitary
+        run: mvn test -Dtest=unitary
 
   intregration_tests:
     runs-on: ubuntu-latest
@@ -27,4 +27,4 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
       - name: Run tests with maven
-        run: mvn -Dtest=integration
+        run: mvn test -Dtest=integration
