--- a/.github/workflows/workflow1.yml
+++ b/.github/workflows/workflow1.yml
@@ -2,7 +2,7 @@ name: workflow1
 
 on:
   push:
-    branches: [develop, feature/*]
+    branches: [ develop, feature/* ]
 
 jobs:
   unitary_tests:
@@ -15,7 +15,7 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
       - name: Run tests with maven
-        run: mvn test -Dtest=ItemsControllerTest2
+        run: mvn test -Dtest="es.codeurjc.rest.items.unitary"
 
   intregration_tests:
     runs-on: ubuntu-latest
@@ -27,4 +27,4 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
       - name: Run tests with maven
-        run: mvn test -Dtest=ItemsControllerTest
+        run: mvn test -Dtest="es.codeurjc.rest.items.integration"
