--- a/.github/workflows/workflow2.yml
+++ b/.github/workflows/workflow2.yml
@@ -2,10 +2,11 @@ name: workflow1
 
 on:
   push:
-    branches: [develop]
+    branches:
+      -develop
 
 jobs:
-  all_tests:
+  unitary_tests:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -15,5 +16,28 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
       - name: Run tests with maven
-        run: mvn test
+        run: mvn test -Dtest="UnitaryTest"
 
+  intregration_tests:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+      - name: Run tests with maven
+        run: mvn test -Dtest="IntegrationTest"
+
+  e2e_tests:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+      - name: Run tests with maven
+        run: mvn test -Dtest="src.test.java.es.codeurjc.ais.e2e.*"
