--- a/.github/workflows/workflow2.yml
+++ b/.github/workflows/workflow2.yml
@@ -6,7 +6,7 @@ on:
 
 
 jobs:
-  unitary_tests:
+  tests:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -15,29 +15,12 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '17'
-      - name: Run tests with maven
+
+      - name: Run Unitary tests with maven
         run: mvn test -Dtest="UnitaryTest"
 
-  intregration_tests:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-      - name: Run tests with maven
+      - name: Run Integration tests with maven
         run: mvn test -Dtest="IntegrationTest"
 
-  e2e_tests:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-      - name: Run tests with maven
+      - name: Run e2e tests with maven
         run: mvn test -Dtest="src.test.java.es.codeurjc.ais.e2e.*"
