--- a/.github/workflows/workflow1.yml
+++ b/.github/workflows/workflow1.yml
@@ -2,10 +2,10 @@ name: workflow1
 
 on:
   pull_request:
-    branches: [feature/*]
+    branches: [develop]
 
 jobs:
-  unitary_tests:
+  tests:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -14,17 +14,10 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '17'
-      - name: Run tests with maven
+
+      - name: Run Unitary Tests with maven
         run: mvn test -Dtest="UnitaryTest"
 
-  intregration_tests:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-      - name: Run tests with maven
+      - name: Run Integration Tests with maven
         run: mvn -Dtest="src/test/java/es.codeurjc.ais/integration/**" test
+
