--- a/.github/workflows/workflow1.yml
+++ b/.github/workflows/workflow1.yml
@@ -19,5 +19,5 @@ jobs:
         run: mvn test -Dtest="UnitaryTest"
 
       - name: Run Integration Tests with maven
-        run: mvn test -Dtest=es.codeurjc.ais.integration.*
+        run: mvn test -Dtest=es/codeurjc/ais/integration/*
 
