--- a/.github/workflows/workflow1.yml
+++ b/.github/workflows/workflow1.yml
@@ -16,7 +16,7 @@ jobs:
           java-version: '17'
 
       - name: Run Unitary Tests with maven
-        run: mvn test -Dtest="UnitaryTest"
+        run: mvn test -Dtest="es/codeurjc/ais/unitary/*"
 
       - name: Run Integration Tests with maven
         run: mvn test -Dtest=es/codeurjc/ais/integration/*
