--- a/.github/workflows/workflow1.yml
+++ b/.github/workflows/workflow1.yml
@@ -2,10 +2,11 @@ name: workflow1
 
 on:
   pull_request:
-    branches: [develop]
+    branches:
+      -develop
 
 jobs:
-  tests:
+  Workflow 1 = Unitary and Integration Tests:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -19,5 +20,4 @@ jobs:
         run: mvn test -Dtest="es/codeurjc/ais/unitary/*"
 
       - name: Run Integration Tests with maven
-        run: mvn test -Dtest=es/codeurjc/ais/integration/*
-
+        run: mvn test -Dtest="es/codeurjc/ais/integration/*"
