--- a/.github/workflows/workflow1.yml
+++ b/.github/workflows/workflow1.yml
@@ -3,7 +3,7 @@ name: workflow1
 on:
   pull_request:
     branches:
-      '-develop'
+      - 'develop'
 
 jobs:
   Workflow 1 = Unitary and Integration Tests:
