Workflow 1 con corchetes

--- a/.github/workflows/workflow1.yml
+++ b/.github/workflows/workflow1.yml
@@ -2,8 +2,7 @@ name: workflow1
 
 on:
   pull_request:
-    branches:
-      - develop
+    branches: [develop]
 
 jobs:
   Workflow 1 = Unitary and Integration Tests:
