--- a/.github/workflows/workflow3.yml
+++ b/.github/workflows/workflow3.yml
@@ -1,9 +1,8 @@
 name: Workflow3
 
 on:
-  workflow_dispatch:
-  #schedule:
-  #  - cron:  '0 2 * * *'
+  schedule:
+    - cron:  '0 2 * * *'
 
 jobs:
   NightlyPublish:
