--- a/.github/workflows/workflow5.yml
+++ b/.github/workflows/workflow5.yml
@@ -46,7 +46,7 @@ jobs:
         run: curl https://get.okteto.com/ -sSfL | sh
 
       - name: Login into Okteto
-        run: okteto context use https://cloud.okteto.com/ -token ${{ secrets.OKTETO_TOKEN }}
+        run: okteto context use https://cloud.okteto.com --token ${{ secrets.OKTETO_TOKEN }}
 
       - name: Deploy to Okteto
         run: okteto deploy --wait --name books-reviewer
