--- a/.github/workflows/workflow5.yml
+++ b/.github/workflows/workflow5.yml
@@ -49,4 +49,4 @@ jobs:
         run: okteto context use https://cloud.okteto.com --token ${{ secrets.OKTETO_TOKEN }}
 
       - name: Deploy to Okteto
-        run: okteto deploy --wait --name books-reviewer
+        run: okteto deploy --wait -n books-reviewer
